--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 Welcome to SK<span class="span">'s</span> UI library, which has pre-defined styles and classes .
             </div>
             <div class="button padding-top  ml-10">
-                <a href="avatar.html" class="main-button btn-padding"> Get Started </a>
+                <a href="/components/avatar/avatar.html" class="main-button btn-padding"> Get Started </a>
             </div>
         </main>
     </div>
