feat:final documentation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documentation</title>
     <link rel="stylesheet" href="./landing page/style.css">
-    <link rel="stylesheet" href="./docs/navigation.css">
     <link rel="stylesheet" href="./docs/components.css">
     <script src="https://kit.fontawesome.com/17540dc721.js" crossorigin="anonymous"></script>
 
@@ -17,7 +16,7 @@
     <div class="container m-a">
         <nav class="nav-bar ">
             <div class="left-side">
-                <a href="index.html">GALA<span class="span">X!A</span></a>
+                <a href="./index.html">GALA<span class="span">X!A</span></a>
 
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -27,10 +26,9 @@
             </div>
             <div class="right-side">
                 <ul>
-                    <li><a href="#"><i class="fa fa-github"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                    <li><a onclick="myFunction()" href="#"><i class="fa fa-moon-o" aria-hidden="true"></i></a></li>
+                    <li><a href="https://github.com/stutisk/GALAXIA-component_library"><i class="fa fa-github"></i></a></li>
+                    <li><a href="https://twitter.com/StutiKumari13"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-moon-o" aria-hidden="true"></i></a></li>
 
                 </ul>
             </div>
