--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 Design for <span class="span span-style">better</span> Experience.
             </div>
             <div class=" sub-head head m-a">
-                Welcome to GALA<span class="span">XIA</span> UI library, which has pre-defined styles and classes .
+                Welcome to GALA<span class="span">X!A</span> UI library, which has pre-defined styles and classes .
             </div>
             <div class="button padding-top  ml-10">
                 <a href="./components/installation/installation.html" class="main-button btn-padding"> Get Started </a>
